--- a/assets/Q1.html
+++ b/assets/Q1.html
@@ -5,6 +5,19 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Animation 1</title>
+		<style>
+			div {
+				width: 300px;
+				height: 100px;
+				background: #212121;
+				transition: all 0.3s ease;
+			}
+			div:hover {
+				width: 400px;
+			}
+		</style>
 	</head>
-	<body></body>
+	<body>
+		<div class=""></div>
+	</body>
 </html>
