--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 	</head>
 	<body>
 		<a href="./assets/Q1.html"> Question 1</a>
+		<a href="./assets/Q2.html"> Question 2</a>
+		<a href="./assets/Q3.html"> Question 3</a>
 	</body>
 </html>
